# aiogram-webhook

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  context7.json  package-lock.json  package.json  pyproject.toml  ruff.toml
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: .yfm  404.yaml  dispatch.md  index.yaml  theme.yaml  toc.yaml
docs/_assets/script/: fix_code_blocks.js
docs/_assets/style/: custom.css
docs/_includes/: aiohttp-engine.md  fastapi-engine.md  register-vs-set-webhook.md  request-flow.md  security-warning.md
docs/engines/: overview.md  single-bot-engine.md  token-engine.md
docs/extensions/base-href/: index.js
docs/extensions/breadcrumbs/: index.js
docs/extensions/feedback-control/: index.js
docs/extensions/feedback-control/resources/: feedback-control-extension.js
docs/extensions/vcs-control/: index.js
docs/extensions/vcs-path-fix/: index.js
docs/learn/: first-webhook.md
docs/pages/: custom-integrations.md  dispatch.md
docs/pages/behavior/: overview.md  webhook-replies.md
docs/pages/engines/: custom-engine.md  overview.md  single-bot-engine.md  token-engine.md
docs/pages/extending/: overview.md
docs/pages/learn/: first-webhook.md  overview.md  quick-start.md
docs/pages/other/: api.md  webhook-config.md
docs/pages/recipes/: multi-bot.md  single-bot.md
docs/pages/route/: query-parameters.md
docs/pages/security/: custom-secret-token.md  overview.md  secret-token.md
docs/pages/web/: aiohttp.md  custom.md  fastapi.md  overview.md
docs/pages/webs/: aiohttp.md  custom.md  fastapi.md  overview.md
docs/recipes/: multi-bot.md  single-bot.md
docs/reference/: api.md  errors.md  webhook-config.md
docs/route/: overview.md  path-parameters.md
docs/security/: custom-checks.md  ip-check.md  overview.md  secret-token.md
docs/web/: custom.md  fastapi.md  overview.md
src/aiogram_webhook/: __init__.py  config.py  errors.py  logs.py  tasks.py
src/aiogram_webhook/adapters/: aiohttp.py  base.py  base_adapter.py  base_mapping.py  fastapi.py
src/aiogram_webhook/adapters/aiohttp/: adapter.py  mapping.py
src/aiogram_webhook/adapters/fastapi/: adapter.py  mapping.py
src/aiogram_webhook/config/: bot.py
src/aiogram_webhook/configs/: bot.py  webhook.py
src/aiogram_webhook/engines/: base.py  errors.py  multi.py  simple.py  single.py  target.py  token.py
src/aiogram_webhook/route/: __init__.py  config.py  errors.py  params.py  path.py  query.py  route.py  url.py
src/aiogram_webhook/routing/: __init__.py  base.py  path.py  query.py  static.py
src/aiogram_webhook/security/: __init__.py  errors.py  secret_token.py  security.py
src/aiogram_webhook/security/checks/: check.py  ip.py
src/aiogram_webhook/utils/: _payload.py  config.py  webhook_payload.py
src/aiogram_webhook/web/: __init__.py  _starlette.py  aiohttp.py  base.py  fastapi.py
tests/: conftest.py  test_aiohttp_web.py  test_base_webhook_engine.py  test_fastapi_web.py  test_ip_check.py  test_ip_security_check.py  test_route.py  test_route_urls_and_params.py  test_routing.py  test_secret_token.py  test_secret_token_security.py  test_security.py  test_single_bot_engine.py  test_token_webhook_engine.py  test_webhook_payload.py  test_webhook_payload_builder.py
tests/fixtures/: __init__.py  fixtures_bound_request.py  fixtures_checks.py  multipart.py  multipart_payload.py  request.py  security_checks.py  shutdown.py  web_request.py  webhook_engine.py
