[project]
name = "aiogram-webhook"
version = "1.0.0"
description = "A python library for integrating webhook support with multiple web frameworks in aiogram. Organizes bot operation via webhooks for both single and multi-bot setups."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "m-xim", email = "i@m-xim.ru" }]
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.14.0",
    "yarl>=1.17.0",
]

keywords = [
    "aiogram",
    "telegram",
    "webhook",
    "fastapi",
    "aiohttp",
    "multibot",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/m-xim/aiogram-webhook"
Repository = "https://github.com/m-xim/aiogram-webhook"
Issues = "https://github.com/m-xim/aiogram-webhook/issues"
Documentation = "https://github.com/m-xim/aiogram-webhook#readme"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.128.0",
]
aiohttp = [
    "aiohttp>=3.9.0",
]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio",
    "httpx"
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
package = true


[tool.semantic_release]
version_source = "pyproject"
commit_message = "chore(release): {version}"
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
